✨ feat: add HaMeR server & refactor GSAM2 config management
- Add HaMeR hand reconstruction server (recons/server/hamer.py)
- Migrate global model state to FastAPI app.state pattern
- Make HuggingFace mirror endpoint configurable via yaml
- Rename config_gsam2.yaml → gsam.yaml for consistency
- Remove unused placeholder configs (da3, fdpose, run.yaml)

--- a/omnidexgrasp/cfg/model/gsam.yaml
+++ b/omnidexgrasp/cfg/model/gsam.yaml
@@ -4,6 +4,8 @@ server:
   port: 6001
 
 model:
+  # 🌐 HuggingFace mirror (null to use default)
+  hf_endpoint: "https://hf-mirror.com"
   # 🦖 Grounding DINO
   grounding_dino_path: ../checkpoints/gsam2/grounding-dino-base
   # 🎭 SAM2
