🔧 feat: add object scale computation & pipeline error handling
- Add ScaleResult dataclass and scale computation pipeline (depth → pointcloud → denoise → OBB scale)
- Add extract_obj_mask_rle() for GSAM scene detection mask extraction
- Add per-task try-except with failure tracking for batch resilience
- Add scale config params (depth_scale, DBSCAN, statistical outlier removal)
- Update environment docs with server/pipeline setup instructions
- Adjust GSAM detection thresholds for better recall

--- a/omnidexgrasp/cfg/recons.yaml
+++ b/omnidexgrasp/cfg/recons.yaml
@@ -11,6 +11,15 @@ out:
   vis: true           # 📊 Output visualizations
   inter_out: false    # 💾 Output intermediate data (detections, vertices)
 
+# 📏 Object scale computation params
+scale:
+  depth_scale: 0.001          # depth.png uint16 → meters (mm * 0.001)
+  max_depth_m: 3.0            # discard depth > 3m
+  dbscan_eps: 0.005           # DBSCAN neighborhood radius (meters)
+  dbscan_min_samples: 10      # DBSCAN min cluster size
+  stat_nb_neighbors: 20       # statistical outlier removal neighbors
+  stat_std_ratio: 2.0         # statistical outlier removal std ratio
+
 # 🔧 Hydra output control
 hydra:
   run:
