🚀 feat: integrate DA3/FDPose pipeline + flat output structure
Pipeline: add call_da3/call_fdpose, 7-step process_task flow.
Helpers: encode_mesh_b64, load_depth_as_b64, scale_and_center_mesh.
save_out(): flat 8-file output (seg_mask, quat_xyzw poses, camera_params).
Config: add DA3/FDPose server URLs, timeout 60→120.

--- a/omnidexgrasp/cfg/recons.yaml
+++ b/omnidexgrasp/cfg/recons.yaml
@@ -5,7 +5,9 @@ output: ../out
 servers:
   gsam: http://localhost:6001/predict
   hamer: http://localhost:6002/predict
-  timeout: 60
+  da3: http://localhost:6003/predict
+  fdpose: http://localhost:6004/predict
+  timeout: 120
 
 out:
   vis: true           # 📊 Output visualizations
