🤚 feat: add MANO optimization dataloader & entry point
optim/dataloader.py: OptimDataLoader loads flat output structure,
shared normalized camera_params for hand_cam and obj_cam.
optim/optim_mano_hand.py: Hydra-based 3-stage optimization runner.
EasyHOI: add as submodule with setup.py (pip install -e).
cfg/optim.yaml: datasets/output/easyhoi_root paths.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "omnidexgrasp/thirdparty/FoundationPose"]
 	path = omnidexgrasp/thirdparty/FoundationPose
 	url = https://github.com/NVlabs/FoundationPose
+[submodule "omnidexgrasp/thirdparty/EasyHOI"]
+	path = omnidexgrasp/thirdparty/EasyHOI
+	url = https://github.com/ZhexiLuo/EasyHOI
