🔄 refactor: migrate to base64 image transmission + add depth rescaling
Key improvements:
- [GSAM2, HaMeR, DA3, FDPose] Replace file paths with base64 image encoding for stateless server requests
- [Pipeline] Pre-encode images once, reuse across all servers (eliminates redundant I/O)
- [Pipeline] Pre-compute intrinsics for both scene/grasp resolutions (avoids recomputation)
- [DA3Result] Add rescaled_depth_b64, alpha, beta fields for affine depth rescaling
- [Rescaling] Implement rescale_da3_depth() to map relative→metric using scene depth as reference
- [FDPose] Enhance pose_visualization_with_3d_mesh() to render mesh overlay with lighting
- [Config] Add rescale_window_size parameter for depth center region sampling

Benefits:
- No more file I/O between services → faster, more portable
- Depth rescaling enables metric depth from relative DA3 predictions
- Better separation of concerns (image encoding in pipeline, not servers)
- Reduced GPU memory with mesh rendering on single FDPose instance

Staging: 7 modified files (run.py, data.py, servers: gsam/hamer/da3/fdpose, config)

--- a/omnidexgrasp/cfg/recons.yaml
+++ b/omnidexgrasp/cfg/recons.yaml
@@ -6,7 +6,7 @@ servers:
   gsam: http://localhost:6001/predict
   hamer: http://localhost:6002/predict
   da3: http://localhost:6003/predict
-  fdpose: http://localhost:6004/predict
+  fdpose: http://localhost:6004/predict # run `ssh -f -N -L 6004:localhost:6004 rl-1` before `python -m recons.run`
   timeout: 120
 
 out:
@@ -21,6 +21,9 @@ scale:
   dbscan_min_samples: 10      # DBSCAN min cluster size
   stat_nb_neighbors: 20       # statistical outlier removal neighbors
   stat_std_ratio: 2.0         # statistical outlier removal std ratio
+
+# 🔄 Depth rescaling params
+rescale_window_size: 20       # window size around mask centroid for affine fit
 
 # 🔧 Hydra output control
 hydra:
