🎨 feat: add MTL/texture transmission to FDPose pipeline
- run.py: add encode_mtl_file(), encode_texture_file(),
  extract_texture_filename_from_mtl() helpers
- run.py: pass mtl_b64 + texture_b64 + texture_filename to both
  scene and grasp FDPose calls
- fdpose.py: accept obj_mtl_b64/obj_texture_b64/texture_filename in
  PredictRequest; write to tempdir so trimesh loads texture correctly
- data.py: add obj_material field to TaskInput
- thirdparty: add megapose6d submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "omnidexgrasp/thirdparty/EasyHOI"]
 	path = omnidexgrasp/thirdparty/EasyHOI
 	url = https://github.com/ZhexiLuo/EasyHOI
+[submodule "omnidexgrasp/thirdparty/megapose6d"]
+	path = omnidexgrasp/thirdparty/megapose6d
+	url = https://github.com/megapose6d/megapose6d.git
