--- a/omnidexgrasp/cfg/recons.yaml
+++ b/omnidexgrasp/cfg/recons.yaml
@@ -5,8 +5,6 @@ output: ../out
 servers:
   gsam: http://localhost:6001/predict
   hamer: http://localhost:6002/predict
-  da3: http://localhost:6003/predict
-  fdpose: http://localhost:6004/predict # run `ssh -f -N -L 6004:localhost:6004 rl-1` before `python -m recons.run`
   timeout: 120
 
 out:
@@ -17,13 +15,9 @@ out:
 scale:
   depth_scale: 0.001          # depth.png uint16 → meters (mm * 0.001)
   max_depth_m: 3.0            # discard depth > 3m
-  dbscan_eps: 0.005           # DBSCAN neighborhood radius (meters)
-  dbscan_min_samples: 10      # DBSCAN min cluster size
-  stat_nb_neighbors: 20       # statistical outlier removal neighbors
-  stat_std_ratio: 2.0         # statistical outlier removal std ratio
-
-# 🔄 Depth rescaling params
-rescale_window_size: 20       # window size around mask centroid for affine fit
+  edge_erode_px: 3            # erode object mask by N px to remove boundary flying pixels
+  stat_nb_neighbors: 80       # statistical outlier removal: neighbor count
+  stat_std_ratio: 2.0         # statistical outlier removal: std threshold
 
 # 🔧 Hydra output control
 hydra:
