✨ feat: add MegaPose6D pose estimation pipeline
- recons/pose_est.py: MegaPoseEstimator (load-once design), scene+grasp inference with ICP
- recons/client.py: full reconstruction pipeline client with detection.json output
- recons/data.py: PoseEstInput/PoseEstResult dataclasses + _extract_best_obj_det helper
- cfg/recons.yaml: add megapose6d config block (scene/grasp model, bsz_images)
- cfg/model/megapose6d.yaml: standalone megapose6d config for pose_est entry point
- cfg/human2robo.yaml: placeholder config added
- recons/server/gsam.py, hamer.py: server improvements

--- a/omnidexgrasp/cfg/recons.yaml
+++ b/omnidexgrasp/cfg/recons.yaml
@@ -19,6 +19,14 @@ scale:
   stat_nb_neighbors: 80       # statistical outlier removal: neighbor count
   stat_std_ratio: 2.0         # statistical outlier removal: std threshold
 
+# 🎯 MegaPose6D pose estimation config (used by pose_est.py)
+megapose6d:
+  scene_model: "megapose-1.0-RGB-multi-hypothesis-icp"
+  grasp_model: "megapose-1.0-RGB-multi-hypothesis"
+  n_refiner_iterations: 5
+  n_pose_hypotheses: 5
+  bsz_images: 64
+
 # 🔧 Hydra output control
 hydra:
   run:
