🗑️ refactor: add n_workers config + remove dead run.py
- cfg/recons.yaml: add n_workers=1 to limit EGL context concurrency
- recons/run.py: remove (replaced by client.py)

--- a/omnidexgrasp/cfg/recons.yaml
+++ b/omnidexgrasp/cfg/recons.yaml
@@ -26,6 +26,7 @@ megapose6d:
   n_refiner_iterations: 5
   n_pose_hypotheses: 5
   bsz_images: 64
+  n_workers: 1    # 1 worker per renderer to avoid EGL context exhaustion (9→3)
 
 # 🔧 Hydra output control
 hydra:
