🔧 refactor: add optim/main.py entry + minor cleanup
- Add optim/main.py: HOI_Sync three-stage optimization pipeline entry
- Fix easyhoi_root path: ../thirdparty/EasyHOI → thirdparty/EasyHOI
- recons/data.py: trim stale inline comments
- recons/server/gsam.py: simplify log messages

--- a/omnidexgrasp/cfg/optim.yaml
+++ b/omnidexgrasp/cfg/optim.yaml
@@ -1,7 +1,7 @@
 # 🤚 MANO Hand Optimization Config
 datasets: ../datasets
 output: ../out
-easyhoi_root: ../thirdparty/EasyHOI
+easyhoi_root: thirdparty/EasyHOI
 
 hydra:
   run:
