--- a/omnidexgrasp/cfg/optim.yaml
+++ b/omnidexgrasp/cfg/optim.yaml
@@ -3,6 +3,9 @@ datasets: ../datasets
 output: ../out
 easyhoi_root: thirdparty/EasyHOI
 
+out:
+  inter_out: false  # Save intermediate EasyHOI files under data/optim/
+
 hydra:
   run:
     dir: .
