--- a/omnidexgrasp/cfg/recons.yaml
+++ b/omnidexgrasp/cfg/recons.yaml
@@ -3,8 +3,8 @@ defaults:
   - model/megapose6d@megapose6d  # load cfg/model/megapose6d.yaml under cfg.megapose6d
   - _self_
 
-datasets: ../datasets
-output: ../out
+datasets: ../../2026-2-25-export
+output: ../../out
 
 servers:
   gsam: http://localhost:6001/predict
