🔧 fix: correct typo assests → assets in h2r.yaml and vis_dexgrasp.py

--- a/omnidexgrasp/cfg/h2r.yaml
+++ b/omnidexgrasp/cfg/h2r.yaml
@@ -8,7 +8,7 @@ n_obj_pts: 2048
 device: cuda
 
 assets_root: ../assets/robo
-mano_assets_root: ../assests/mano
+mano_assets_root: ../assets/mano
 
 optim:
   stage1:
